feat (little details added, responsiveness added)

--- a/index.html
+++ b/index.html
@@ -4,122 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My personal Website</title>
+    <link rel="stylesheet" href="/css/mystyle.css" />
   </head>
   <body>
-    <style>
-      /* general classes */
-      body {
-        font-family: "Courier New", Courier, monospace;
-        background-color: rgb(27, 39, 39);
-        color: aliceblue;
-        margin: 0 4rem 0 4rem;
-      }
-      h1,
-      h2,
-      h3,
-      h4,
-      h5,
-      h6 {
-        font-weight: 200;
-      }
-      h3 {
-        text-transform: uppercase;
-        letter-spacing: 0.15rem;
-        color: rgba(0, 255, 255, 0.511);
-        font-size: 0.8rem;
-      }
-      ul {
-        padding: 0;
-        margin: 0;
-        line-height: 2.5rem;
-      }
-      ul li {
-        list-style: none;
-      }
-      a {
-        color: aqua;
-        text-decoration: none;
-      }
-      a:hover {
-        color: aquamarine;
-        border-bottom: 2px solid orangered;
-        padding-bottom: 0.3rem;
-      }
-      nav {
-        margin-left: auto;
-      }
-      footer {
-        height: 20rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      /* specific classes BEM */
-      .container__top {
-        display: flex;
-        gap: 1.8rem;
-        justify-content: space-between;
-        align-items: end;
-      }
-      .container__top--left {
-        min-width: 600px;
-        height: 400px;
-        background-image: url("imgs/ga-mood-image.jpg");
-        background-size: contain;
-        background-repeat: no-repeat;
-      }
-
-      .container__contact {
-        margin-top: 2.5rem;
-        display: flex;
-        gap: 2rem;
-        justify-content: space-between;
-        border: 1px solid rgba(64, 224, 208, 0.138);
-        padding: 1.5rem;
-        border-radius: 1rem;
-      }
-      .container__social {
-        margin-top: 2.5rem;
-        display: flex;
-        gap: 2rem;
-        justify-content: center;
-        border: 1px solid rgba(64, 224, 208, 0.138);
-        padding: 1.5rem;
-        border-radius: 1rem;
-      }
-
-      /* specific classes */
-      .list-hobbies {
-        display: flex;
-        gap: 1rem;
-        align-items: center;
-      }
-      .list-hobbies li {
-        border: 1px solid rgba(64, 224, 208, 0.272);
-        padding: 0.4rem;
-        border-radius: 0.3rem;
-      }
-      .social-item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      .social-item svg:hover {
-        filter: hue-rotate(0deg) saturate(10000%);
-      }
-      .social-item p {
-        border-bottom: 2px solid orangered;
-        width: min-content;
-        text-align: center;
-        padding-bottom: 0.7rem;
-        align-self: center;
-      }
-      .svg-social {
-        width: 3rem;
-        height: 3rem;
-      }
-    </style>
     <header>
       <div class="container__top">
         <div class="container__top--left"></div>
