correct spelling, little thing

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul class="list-hobbies">
               <li>Basketball</li>
               <li>cycling</li>
-              <li>swim</li>
+              <li>swimming</li>
               <li>design / draw</li>
             </ul>
           </nav>
