fix (enhanced the overall flex layout, changed the social links appeareance)

--- a/index.html
+++ b/index.html
@@ -107,15 +107,15 @@
       <section id="gallery" class="container__gallery">
         <h2>Some cool pictures</h2>
         <div class="gallery-wrapper">
-          <figure>
+          <figure class="gallery-item">
             <img src="imgs/ga-gallery-a.jpg" alt="sunset with two surfers" />
             <figcaption>Peaceful Beach</figcaption>
           </figure>
-          <figure>
+          <figure class="gallery-item">
             <img src="imgs/ga-gallery-b.jpg" alt="sunset with two surfers" />
             <figcaption>Munich Calling</figcaption>
           </figure>
-          <figure>
+          <figure class="gallery-item">
             <img src="imgs/ga-gallery-c.jpg" alt="sunset with two surfers" />
             <figcaption>Forest & Nature</figcaption>
           </figure>
