--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My personal Website</title>
-    <link rel="stylesheet" href="/css/mystyle.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <header>
@@ -135,7 +135,7 @@
           </li>
           <li>
             <a href="https://www.youtube.com/@TheCodingTrain/"
-              >My favourite Youtber</a
+              >My favourite Youtuber</a
             >
           </li>
           <li>
