--- a/index.html
+++ b/index.html
@@ -153,6 +153,13 @@
         </ul>
       </section>
     </main>
-    <footer>Footer</footer>
+    <footer>
+      <div class="footer__left">
+        <p>This Website was brought to you by newbie © 2023</p>
+      </div>
+      <div class="footer__right">
+        <a href="#">Imprint</a><a href="#">Privacy Policy</a>
+      </div>
+    </footer>
   </body>
 </html>
