addon (music section)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
               <li><a href="#social">Social</a></li>
               <li><a href="#gallery">Gallery</a></li>
               <li><a href="#links">Links</a></li>
+              <li><a href="#music">Music</a></li>
             </ul>
             <h3>Intro</h3>
             <p>One day I will retire and sit on this bench at the ocean 🌊</p>
@@ -33,7 +34,8 @@
       </div>
     </header>
     <main>
-      <section id="contact" class="container__contact">
+      <!-- contact -->
+      <section id="contact" class="container container__contact">
         <div class="contact-item">
           <h4>Name</h4>
           <p>Gregor</p>
@@ -47,7 +49,7 @@
           <p>+49 1234 567</p>
         </div>
       </section>
-      <section id="social" class="container__social">
+      <section id="social" class="container container__social">
         <div class="social-item">
           <a href="https://dribbble.com/gregorsart">
             <svg
@@ -104,7 +106,8 @@
           </a>
         </div>
       </section>
-      <section id="gallery" class="container__gallery">
+      <!-- Gallery -->
+      <section id="gallery" class="container container__gallery">
         <h2>Some cool pictures</h2>
         <div class="gallery-wrapper">
           <figure class="gallery-item">
@@ -121,7 +124,8 @@
           </figure>
         </div>
       </section>
-      <section id="links" class="container__links">
+      <!-- Links -->
+      <section id="links" class="container container__links">
         <h2>Useful Links</h2>
         <ul class="list-links">
           <li>
@@ -152,10 +156,38 @@
           </li>
         </ul>
       </section>
+      <!-- music -->
+      <section id="music" class="container container__music">
+        <h2>Favourite Music</h2>
+
+        <ul class="list-music">
+          <li>Skrillex</li>
+          <li>J. Cole</li>
+          <li>Fleetwod Mac</li>
+          <li>Raf Camora</li>
+          <li>Dennis Lloyd</li>
+          <li>Kanye West</li>
+          <li>Halsey</li>
+          <li>Cro</li>
+          <li>Mabel</li>
+          <li>Ski Aggu</li>
+          <li>TashSultana</li>
+          <li>Leonard Cohen</li>
+          <li>Headhunterz</li>
+          <li>Ella Eyre</li>
+          <li>Rae Stremmurd</li>
+          <li>Miguel</li>
+          <li>Sia</li>
+          <li>Miley Cyrus</li>
+          <li>Jorja Smith</li>
+          <li>Tove Lo</li>
+          <li>Kendrick Lamar</li>
+        </ul>
+      </section>
     </main>
     <footer>
       <div class="footer__left">
-        <p>This Website was brought to you by newbie © 2023</p>
+        <p>This website was brought to you by newbie © 2023</p>
       </div>
       <div class="footer__right">
         <a href="#">Imprint</a><a href="#">Privacy Policy</a>
