--- a/index.html
+++ b/index.html
@@ -35,7 +35,59 @@
     </header>
     <main>
       <!-- contact -->
-      <section id="contact" class="container container__contact">
+      <section id="contact" class="container container__contact ga_relative">
+        <!-- topleft -->
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="12"
+          height="12"
+          viewBox="0 0 24 24"
+          class="ga_svg ga_svg--topleft"
+        >
+          <path
+            fill="currentColor"
+            d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10s10-4.47 10-10S17.53 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8s8 3.58 8 8s-3.58 8-8 8z"
+          />
+        </svg>
+        <!-- topright -->
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="12"
+          height="12"
+          viewBox="0 0 24 24"
+          class="ga_svg ga_svg--topright"
+        >
+          <path
+            fill="currentColor"
+            d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10s10-4.47 10-10S17.53 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8s8 3.58 8 8s-3.58 8-8 8z"
+          />
+        </svg>
+        <!-- bottomleft -->
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="12"
+          height="12"
+          viewBox="0 0 24 24"
+          class="ga_svg ga_svg--bottomleft"
+        >
+          <path
+            fill="currentColor"
+            d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10s10-4.47 10-10S17.53 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8s8 3.58 8 8s-3.58 8-8 8z"
+          />
+        </svg>
+        <!-- bottomright -->
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="12"
+          height="12"
+          viewBox="0 0 24 24"
+          class="ga_svg ga_svg--bottomright"
+        >
+          <path
+            fill="currentColor"
+            d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10s10-4.47 10-10S17.53 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8s8 3.58 8 8s-3.58 8-8 8z"
+          />
+        </svg>
         <div class="contact-item">
           <h4>Name</h4>
           <p>Gregor</p>
